Labatt POCM Deployment to UAT 09.16.2016/objects/Marketing_Program_Item__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Marketing_Program__r.Brand__r.Name</formula>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Marketing_Item__c</referenceTo>
        <relationshipLabel>Toolkit Items</relationshipLabel>
        <relationshipName>Marketing_Program_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Program__c</fullName>
        <label>Toolkit</label>
        <referenceTo>Marketing_Program__c</referenceTo>
        <relationshipLabel>Toolkit Items</relationshipLabel>
        <relationshipName>Marketing_Program_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Marketing_Type__c</fullName>
        <formula>Text(Marketing_Item__r.Marketing_Type__c)</formula>
        <label>Marketing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Marketing_Item__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Toolkit Item</label>
    <nameField>
        <displayFormat>TkI-{0000}</displayFormat>
        <label>Toolkit Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toolkit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_Be_Same_Brand</fullName>
        <active>true</active>
        <errorConditionFormula>Marketing_Item__r.Brand__c !=  Marketing_Program__r.Brand__c</errorConditionFormula>
        <errorMessage>Marketing Item must be from the same brand as the Marketing Program</errorMessage>
    </validationRules>
</CustomObject>